lox-tests/tests/if/class_in_else.stderr
ERROR: at 'class': Expected expression, got Class
 --> 2:22
  |
2 | if (true) "ok"; else class Foo {}
  |                      ^---^
